--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#Live Reload ?? ???
 spring.devtools.livereload.enabled=true
-spring.freemarker.cache=false
+spring.web.resources.static-locations=file:src/main/resources/static/
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
