--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Live Reload ?? ???
+#Live Reload 기능 활성화
 spring.devtools.livereload.enabled=true
 spring.web.resources.static-locations=file:src/main/resources/static/
 spring.thymeleaf.cache=false
