application.properties 연결정보 입력

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,18 @@ spring.devtools.livereload.enabled=true
 spring.web.resources.static-locations=file:src/main/resources/static/
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
+
+#Oracle DB \uC5F0\uB3D9
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@routeplanner_high?TNS_ADMIN=/Users/ingi/wallet/wallet
+spring.datasource.username=admin
+spring.datasource.password=Rkdqorrl123!@
+
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database=oracle
+
+logging.level.org.hibernate=info
