application.properties 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.thymeleaf.prefix=file:src/main/resources/templates/
 #Oracle DB \uC5F0\uB3D9
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@routeplanner_high?TNS_ADMIN=/Users/ingi/wallet/wallet
-spring.datasource.username=admin
-spring.datasource.password=Rkdqorrl123!@
+spring.datasource.username=
+spring.datasource.password=
 
 
 # JPA
